--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,3 @@
 [buildout]
-extends = plone3.cfg
-parts +=
-    roadrunner
-eggs +=
-    plone4bio.base
-develop = .
-
-[instance]
-zcml +=
-    plone4bio.base
-
-[roadrunner]
-recipe = roadrunner:plone
-packages-under-test = plone4bio.base
-
+extends = test-plone-4.0.x.cfg
+# extends = test-plone-3.3.x.cfg
