--- a/test-plone-3.3.x.cfg
+++ b/test-plone-3.3.x.cfg
@@ -2,3 +2,8 @@
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.x.cfg
 package-name = plone4bio.base
+
+[versions]
+zope.i18n = 3.7.4
+zc.buildout = 1.4.3
+zc.recipe.testrunner = 1.3.0
