--- a/test-plone-3.3.x.cfg
+++ b/test-plone-3.3.x.cfg
@@ -2,5 +2,5 @@
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.x.cfg
 package-name = plone4bio.base
-
-[versions]
+eggs +=
+    PIL
