--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,17 @@
 [buildout]
 extends = test-plone-4.0.x.cfg
 # extends = test-plone-3.3.x.cfg
+parts +=
+    docs
+
+[docs]
+recipe = zc.recipe.egg
+eggs =  
+  ${buildout:package-name}
+  sphinx <= 0.99
+  sphinx-pypi-upload
+  zc.rst2
+  pkginfo
+  repoze.sphinx.autointerface
+interpreter = docpy
+
